--- a/js/src/components/tiptap-ui-primitive/menu/menu.scss
+++ b/js/src/components/tiptap-ui-primitive/menu/menu.scss
@@ -1,5 +1,5 @@
 .tiptap-menu-content {
-  z-index: 50;
+  z-index: 200;
   display: flex;
   flex-direction: column;
   height: 100%;
